[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imml"
version = "0.1.0"
description = "A python package for multi-modal learning with incomplete data"
readme = "README.rst"
authors = [
    { name = "", email = "a@mail.com" }
]
maintainers = [
    { name = "", email = "a@mail.com" }
]
keywords = ["multi-modal learning", "machine learning", "incomplete data"]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "scikit-learn>=1.2.0",
    "pandas>=1.3.3",
    "numpy>=1.21.3,<2",
    "scipy>=1,<1.13",
    "networkx>=2.5",
    "gensim>=4.2",
    "h5py>=3.6",
    "snfpy>=0",
    "control>=0",
]

[project.urls]
homepage = ""
source = ""
download = ""
tracker = ""
"release notes" = ""

[project.optional-dependencies]
matlab = [
    "oct2py>=5.6.0",
]
r = [
    "rpy2>=3.5.14",
]
torch = [
    "torch>=2.0.1",
    "lightning>=2.0.2",
]
docs = [
    "sphinx>=7.3.7",
    "sphinx-gallery>=0.17.1",
    "sphinx_rtd_theme>=1.0.0",
]
tutorials = [
    "matplotlib>=3.3.4",
    "seaborn>=0.9.0",
]
tests = [
    "pytest>=7.1.2",
    "pytest-cov>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["imml"]