[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imml"
version = "0.1.0"
description = "A python package for multi-modal learning with incomplete data"
readme = "README.rst"
authors = [
    {name = "Alberto López", email = "a.l.sanchez@medisin.uio.no" }
]
maintainers = [
    {name = "Alberto López", email = "a.l.sanchez@medisin.uio.no" }
]
keywords = ["multi-modal learning", "machine learning", "incomplete data", "missing data"]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.4.1",
    "pandas>=2.2.2",
    "networkx>=2.5",
    "h5py>=3.9.0",
    "snfpy>=0",
    "control>=0.10.2",
    "cvxpy>=1.7.1",
    "numba>=0.58.0"
]

[project.urls]
homepage = "..."
source = "github.com/ocbe-uio/imml"
download = "..."
tracker = "https://github.com/ocbe-uio/imml/issues"
"release notes" = "..."

[tool.my-deps]
matlab = [
    "oct2py>=5.8.0",
]
r = [
    "rpy2>=3.5.14",
]
deep = [
    "lightning>=2.2",
    "transformers>=4.51.3",
    "torch_geometric>=2.6.1",
    "torchvision>=0.19.1",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-gallery>=0.17.1",
    "sphinx_rtd_theme>=1.0.0",
    { include = "deep" }
]
tutorials = [
    "seaborn>=0.9.0",
]
tests = [
    "pytest>=7.1.2",
    "pytest-cov>=2.9.0",
]
[project.optional-dependencies]
docs = { include = ["tool.my-deps.deep", "tool.my-deps.docs"] }

[tool.setuptools.packages.find]
where = ["imml"]